--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                   <div class="col-md-4">
                       <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Bus: Thumbnail" focusable="false">
                         <rect width="100%" height="100%" fill="#632ccb"/>
-                        <image href="zelle.png" width="100%" height="100%"/>
+                        <image href="Zelle.png" width="100%" height="100%"/>
                       </svg>
                   </div>
                   <div class="col-md-8">
