--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <div></div>
         <div class="col-lg-7 col-md-8 mx-auto">
-          <p class="lead text-muted">In this portfolio you will likely notice that during my career I have developed a strong familiarity with the payment and money movement space. This is intentional. Payments are an interesting challenge for a PM. On top of the traditional juggling act of user needs, technical feasibility and development time, payments adds the additional complexity of stringent regulatory requirements. I thoroughly enjoy the complexity of balancing these four needs to deliver exceptional user experience. 
+          <p class="lead text-muted">Throughout my career I have developed a strong familiarity with the payment and money movement space. This is intentional. Payments are an interesting challenge for a PM. On top of the traditional juggling act of user needs, technical feasibility and development time, payments adds the additional complexity of stringent regulatory requirements. I thoroughly enjoy the complexity of balancing these four needs to deliver exceptional user experience. 
           </p>  
           <p class="lead text-muted">Below you can find a collection of Products I have worked on. Each 'card' shows a screenshot of the Product, a brief description and, when possible, links to related documentation.
 
@@ -155,7 +155,7 @@
               <div class="col-md-8">
                   <div class="card-body">
                       <h5 class="card-title">Citi Personal Loan Payments</h5>
-                      <p class="card-text">Served as the Product Owner for Personal Loan Payments.  Lead the product from concept-to-launch to enable hundreds of thousands of customers to seamless pay tens of millions of dollars worth of personal loans. Utilized the bank’s existing ACH payment rail architecture and adapted it to the users needs as well as the regulatory requirements inherent to payments. Payment products are by their nature cross-functional as well as financially, technically and legally complex. Therefore, in order to ship a high-quality, safe and secure user experience I collaborated with other Product teams as well as a variety of other external including: Design, UX Research, Development, Legal, and Retail. Additionally, I reduced payment processing time from 6 days to 1 day, drastically cut Citi’s costs by eliminating a third-party system, and helped increase personal loan enrollment by 30%.   
+                      <p class="card-text">I served as the Product Owner for Personal Loan Payments.  Lead the product from concept-to-launch to enable hundreds of thousands of customers to seamless pay tens of millions of dollars worth of personal loans. Utilized the bank’s existing ACH payment rail architecture and adapted it to the users needs as well as the regulatory requirements inherent to payments. Payment products are by their nature cross-functional as well as financially, technically and legally complex. Therefore, in order to ship a high-quality, safe and secure user experience I collaborated with other Product teams as well as a variety of external teams including: Design, UX Research, Development, Legal, and Retail. Additionally, I reduced payment processing time from 6 days to 1 day, drastically cut Citi’s costs by eliminating a third-party system, and helped increase personal loan enrollment by 30%.   
 
                       </p>
                       <div class="d-flex justify-content-between align-items-center">
