--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <div></div>
         <div class="col-lg-7 col-md-8 mx-auto">
-          <p class="lead text-muted">Throughout my career I have developed a strong familiarity with the payment and money movement space. This is intentional. Payments are an interesting challenge for a PM. On top of the traditional juggling act of user needs, technical feasibility and development time, payments adds the additional complexity of stringent regulatory requirements. I thoroughly enjoy the complexity of balancing these four needs to deliver exceptional user experience. 
+          <p class="lead text-muted">Throughout my career I have developed a strong familiarity with the payment and money movement space. This is intentional. Payments are an interesting challenge for a PM. On top of the traditional juggling act of user needs, technical feasibility and development time, payments add the additional complexity of stringent regulatory requirements. I thoroughly enjoy the complexity of balancing these four needs to deliver exceptional user experience. 
           </p>  
           <p class="lead text-muted">Below you can find a collection of Products I have worked on. Each 'card' shows a screenshot of the Product, a brief description and, when possible, links to related documentation.
 
