update to Zelle experience

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
           <h4 class="text-white">About</h4>
-          <p class="text-muted">Liam, a Product Manager at EY, specializes in leading products from concept-to-launch for a variety of clients in the financial services industry. Recognizing that an excelent PM is equiped with strong techincal fluency, Liam is engaged in MITs 32 week intensive Fullstack coding bootcamp to build on his existing knowledge earned through a double major in Mathematics and Finance from the College of William and Mary.</p>
+          <p class="text-muted">Liam, a Product Manager at EY, specializes in leading products from concept-to-launch for a variety of clients in the financial services industry. Recognizing that an excellent PM is equiped with strong techincal fluency, Liam is engaged in MITs 32 week intensive Fullstack coding bootcamp to build on his existing knowledge earned through a double major in Mathematics and Finance from the College of William and Mary.</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Contact</h4>
           <ul class="list-unstyled">
             <li><a href="https://www.linkedin.com/in/liam-cashel/" class="text-white">LinkedIn</a></li>
             <li><a href="https://github.com/rockgard3n" class="text-white">Github</a></li>
-            <li><a href="https://drive.google.com/file/d/1VlSjfByYeqle2T_DVaQ29VG6_SbJZnIn/view?usp=sharing" class="text-white">Resume</a></li>
+            <li><a href="https://drive.google.com/file/d/1hEDXXZ7Lh7SU811sKD9-okdXgEn2ncsS/view?usp=sharing" class="text-white">Resume</a></li>
           </ul>
         </div>
       </div>
@@ -100,7 +100,7 @@
         <div class="col-md-11">
           <div class="card shadow-sm mb-3">
             <div class="row g-0">
-                <div class="col-md-4">
+                <div class="col-md-4 gavel">
                     <svg class="bd-placeholder-img card-img-top" width="100%" height="330" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Bus: Thumbnail" focusable="false">
                       <rect width="100%" height="100%" fill="#56a3a6"/>
                       <image href="gavel.png" width="400" height="330"/>
@@ -179,7 +179,7 @@
           <div class="col-md-11">
             <div class="card shadow-sm mb-3">
               <div class="row g-0">
-                  <div class="col-md-4">
+                  <div class="col-md-4 zelle">
                       <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Bus: Thumbnail" focusable="false">
                         <rect width="100%" height="100%" fill="#632ccb"/>
                         <image href="Zelle.png" width="100%" height="100%"/>
@@ -188,7 +188,8 @@
                   <div class="col-md-8">
                       <div class="card-body">
                           <h5 class="card-title">Zelle</h5>
-                          <p class="card-text">In my current role I am one of three Product Managers for Zelle at one of the countries largest consumer banks, where our users move billions of dollars via Zelle annually. Specifically, I manage Zelle Payments. We are currently in the middle of a large scale release but once it is public knowledge I will provide more detail here.
+                          <p class="card-text">In my current role I am the Zelle Payments Product Manager at one of the countries largest consumer banks, where our 23+ million users move over 24 billion dollars via Zelle annually. Since joining the team, in January 2022, I increased new user engagement by 35% by rebuilding Zelle Limits to better suit our newly enrolled users’ needs. Additionally, I discovered an authentication vulnerability in the customer enrollment process with the potential to lead to serious cases of fraud. Taking the initiative, I proposed, then led the research, design & rollout of a new mandatory OTP verification flow for 22 million users.  Zelle is a living product, and I am working on several initiatives that have yet to be released. Once they are public knowledge I will provide more details here.
+
                           </p>
                           <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
