update Mural link
mural link was dead so changed to a PDF in my drive

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="col-md-8">
                     <div class="card-body">
                         <h5 class="card-title">Gavel: A P2P Payment Solution</h5>
-                        <p class="card-text">The vast majority of Gen Z use some sort of P2P payment solution on their phones. Gavel fills a currently unoccupied niche within this space. What I dubbed the P2S, Peer to Stranger, space. With a conventional P2P payment platform once money is exchanged it is difficult to ensure both parties live up to the terms of their agreement. Gavel combines 3 features to drastically reduce this transaction risk. First as any sex ed teacher will tell you the best way to avoid risk is to abstain. Gavel creates a user profile rating that allows users to make informed choices on who they engage with. Second throughout all transactions an immutable log is created with all of the discourse between users, which ensures a consistent source of truth. And finally if there is a dispute Gavel connects disputing parties to trained arbiters who use our immutable log to reach a un-biased decisions.
+                        <p class="card-text">The vast majority of Gen Z use some sort of P2P payment solution on their phones. Gavel fills a currently unoccupied niche within this space. What I dubbed the P2S, Peer to Stranger, space. With a conventional P2P payment platform once money is exchanged it is difficult to ensure both parties live up to the terms of their agreement. Gavel combines 3 features to drastically reduce this transaction risk. First as any sex ed teacher will tell you the best way to avoid risk is to abstain. Gavel creates a user profile rating that allows users to make informed choices on who they engage with. Second throughout all transactions an immutable log is created with all of the discourse between users, which ensures a consistent source of truth. And finally if there is a dispute Gavel connects disputing parties to trained arbiters who use our immutable log to reach a un-biased decisions. <br/> <small>Note: When viewing the interview results, please zoom in to see the detailed findings.</small>
                         </p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
@@ -133,7 +133,7 @@
 
                             <script type="text/javascript">
                               document.getElementById("InterviewBtn").onclick = function () {
-                                  window.open("https://app.mural.co/invitation/mural/discoverey9225/1554900889300?sender=marcotli4400&key=f862e926-90c9-495f-a8c6-d5be151b5370", "_blank");
+                                  window.open("https://drive.google.com/file/d/1AJrKxd6BVUq7ec4L8v0gZVjtNAwFBfL_/view?usp=sharing", "_blank");
                               };
                             </script>
                         </div>
